# poker-coach

./: .gitignore  README.md  package.json
client/: package-lock.json
client/src/: App.tsx  api.ts  index.css
client/src/components/: AnalysisResult.tsx  HandForm.tsx  HandTrainer.tsx  LeakDashboard.tsx  Setup.tsx
server/: package-lock.json  package.json
server/prisma/: schema.prisma
server/prisma/migrations/20260509145734_init/: migration.sql
server/solver-service/: Cargo.toml
server/solver-service/src/: main.rs
server/src/: index.ts
server/src/lib/: cards.ts  openai.ts  ranges.ts  solver.ts  types.ts
server/src/routes/: hands.ts  trainer.ts  users.ts
