[package]
name = "solver-service"
version = "0.1.0"
edition = "2021"

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", default-features = false, features = ["rayon"] }
axum             = { version = "0.7", features = ["json"] }
tokio            = { version = "1",   features = ["full"] }
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"
rand             = "0.8"
